Update UserController.java